src/test/resources/syntax/invalid/group_definition_class_constant_for_string.unpick
unpick v3
const String
    class Foo = Foo.bar